[tool.poetry]
name = "tusfastapiserver"
version = "0.1.0"
description = ""
authors = ["Kirill Ilichev <ilichev.kirill.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.10.5"
fastapi = "^0.112.2"
boto3 = "^1.35.10"
portalocker = "^2.10.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.12.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
coveralls = "^4.0.1"
freezegun = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
